--- a/leadership.html
+++ b/leadership.html
@@ -56,12 +56,14 @@
   
 <div class="container">
   <div class="clearfix">
-    <div class="left-column"><img src="./img/IMG_377330.jpg" class="centered" width=320px max-width=100%  height=auto>
+    <div class="left-column"></br>  
+    <img src="./img/IMG_377330.jpg" class="centered" width=320px max-width=100%  height=auto>
      <p class="centered no-margin" style="font-size: 14px">
         <i> Photo credit: MIT EAPS </i>
       </p>
     </div> 
     <div class="right-column">
+      </br>
       <p>
       I served as a graduate teaching assistant for my department's freshman pre-orientation program, a 5-day exploration of the science of the Earth at MIT and at Mt. Washington in New Hampshire. We organized activities to engage incoming MIT students into learning about extreme weather, hurricanes and blizzards, and current topics of climate research.   
       </p>
@@ -69,13 +71,29 @@
     </div> 
     </div>
 </div>
-  
+</br>
 <div class="section-title">
     2012-2017: Graduate Climate Conference
 </div>
   
-  
-  
+<div class="container">
+  <div class="clearfix">
+    <div class="left-column"></br> 
+    <img src="./img/DSC5933.JPG" class="centered" width=320px max-width=100%  height=auto>
+     <p class="centered no-margin" style="font-size: 14px">
+        <i> Photo credit: Sarah Rosengard </i>
+      </p>
+    </div> 
+    <div class="right-column">
+      </br>
+      <p>
+      The Graduate Climate Conference (GCC) is an annual meeting entirely organized by graduate students for graduate students in the climate sciences. I was directly involved in the planning of three iterations of the conference, serving as program designer (2012-2013), co-chair (2014-2015), and fundraiser (2016-2017). I also represented MIT on the GCC steering committee from 2014-2016.  
+      </p>
+      <p> Click <a style="color:black" href="http://www.graduateclimateconference.com/" target="_blank">here</a> to learn more about this conference, hosted alternatively by MIT and the University of Washington.  </p>
+    </div> 
+    </div>
+</div>  
+</br>  
   
 <footer>
   <div id="footer-content">
