--- a/leadership.html
+++ b/leadership.html
@@ -32,7 +32,7 @@
 <div class="container">
   <div class="clearfix">
     <div class="left-column"> </br> 
-    <img class="centered" src="./img/IMG-20180308-WA0012.jpg" width=320px max-width=100%  height=auto>
+    <img class="centered" src="./img/IMG-20180308-WA0012.jpg">
      <p class="centered no-margin" style="font-size: 16px">
         <i> Photo credit: Maria Paula Angarita </i>
       </p>
