--- a/leadership.html
+++ b/leadership.html
@@ -37,7 +37,7 @@
         <i> Photo credit: Maria Paula Angarita </i>
       </p>
       </br>
-      <iframe class="centered" width="320" height="186" src="https://www.youtube.com/embed/NRLyv9JrgX4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="centered" src="https://www.youtube.com/embed/NRLyv9JrgX4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
      <p class="centered no-margin" style="font-size: 16px"> Click <a style="color:black" href="https://www.youtube.com/watch?v=NRLyv9JrgX4" target="_blank">here</a> to watch the video on Youtube. </p>
     </div> 
     <div class="right-column">
@@ -57,7 +57,7 @@
 <div class="container">
   <div class="clearfix">
     <div class="left-column"></br>  
-    <img src="./img/IMG_377330.jpg" class="centered" width=320px max-width=100%  height=auto>
+    <img class="centered" src="./img/IMG_377330.jpg">
      <p class="centered no-margin" style="font-size: 16px">
         <i> Photo credit: MIT EAPS </i>
       </p>
@@ -79,7 +79,7 @@
 <div class="container">
   <div class="clearfix">
     <div class="left-column"></br> 
-    <img src="./img/DSC5933.JPG" class="centered" width=320px max-width=100%  height=auto>
+    <img class="centered" src="./img/DSC5933.JPG">
      <p class="centered no-margin" style="font-size: 16px">
         <i> Photo credit: Sarah Rosengard </i>
       </p>
