--- a/leadership.html
+++ b/leadership.html
@@ -37,7 +37,7 @@
         <i> Photo credit: Maria Paula Angarita </i>
       </p>
       </br>
-      <iframe class="centered" width="560" height="315" src="https://www.youtube.com/embed/NRLyv9JrgX4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="centered" width="560" src="https://www.youtube.com/embed/NRLyv9JrgX4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
      <p class="centered no-margin" style="font-size: 16px"> Click <a style="color:black" href="https://www.youtube.com/watch?v=NRLyv9JrgX4" target="_blank">here</a> to watch the video on Youtube. </p>
     </div> 
     <div class="right-column">
