--- a/research.html
+++ b/research.html
@@ -33,7 +33,7 @@
   <div class="clearfix">
     <div class="left-column"><img src="./img/hurricane_satradar_SAM_simulation.png" class="centered" width=280px max-width=100%  height=auto>
       </br>
-      <p class="centered no-margin" style="font-size: 14px">
+      <p class="centered caption">
         <i><b>Figure 1.</b> Main components of the mature TC structure in simulated satellite (left) and radar (right) data.</i>
       </p>
       </br>
