--- a/research.html
+++ b/research.html
@@ -33,9 +33,9 @@
   <div class="clearfix">
     <div class="left-column"><img src="./img/hurricane_satradar_SAM_simulation.png" class="centered" width=280px max-width=100%  height=auto>
       </br>
-      <caption>
+      <p class="centered caption">
         <i><b>Figure 1.</b> Main components of the mature TC structure in simulated satellite (left) and radar (right) data.</i>
-      </caption>
+    </p>
       </br>
       </br>
       <img src="./img/bubble_noevap_polar_surfTHTVTPWa_wRMW_d23h00m00_d23h05m00_1200sqzoom.png" class="centered" width=280px max-width=100%  height=auto>
