--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 
 <div class="container">
   <div class="clearfix">
-    <div class="left-column"> <img src="./img/IMG_2322.jpg" class="centered" width=240px > 
+    <div class="left-column"> </br>
+    <img class="centered" src="./img/IMG_2322.jpg"  width=240px > 
       <h3>Diamilet (Diamy) Pérez-Betancourt, PhD</h3>
-      <p class="centered no-margin" style="font-size: 16px"> 
+      <p class="centered caption"> 
          <i> Atmospheric Scientist </i>
         <br/> <b>Name pronunciation:</b> Dee-a-mee-LET (Dee-A-mee) PE-res Be-tan-COORT
         <br/> <b>Pronouns:</b> she/her/hers
