--- a/leadership.html
+++ b/leadership.html
@@ -33,7 +33,7 @@
   <div class="clearfix">
     <div class="left-column"> </br> 
     <img class="centered" src="./img/IMG-20180308-WA0012.jpg">
-     <p class="centered no-margin" style="font-size: 16px">
+     <p class="centered caption">
         <i> Photo credit: Maria Paula Angarita </i>
       </p>
       </br>
@@ -41,7 +41,7 @@
   <div class="videoWrapper">
       <iframe width="560" height="349" src="https://www.youtube.com/embed/NRLyv9JrgX4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
-     <p class="centered no-margin" style="font-size: 16px"> Click <a style="color:black" href="https://www.youtube.com/watch?v=NRLyv9JrgX4" target="_blank">here</a> to watch the video on Youtube. </p>
+     <p class="centered caption"> Click <a style="color:black" href="https://www.youtube.com/watch?v=NRLyv9JrgX4" target="_blank">here</a> to watch the video on Youtube. </p>
     </div> 
     <div class="right-column">
       </br>
@@ -61,7 +61,7 @@
   <div class="clearfix">
     <div class="left-column"></br>  
     <img class="centered" src="./img/IMG_377330.jpg">
-     <p class="centered no-margin" style="font-size: 16px">
+     <p class="centered caption">
         <i> Photo credit: MIT EAPS </i>
       </p>
     </div> 
@@ -83,7 +83,7 @@
   <div class="clearfix">
     <div class="left-column"></br> 
     <img class="centered" src="./img/DSC5933.JPG">
-     <p class="centered no-margin" style="font-size: 16px">
+     <p class="centered caption">
         <i> Photo credit: Sarah Rosengard </i>
       </p>
     </div> 
