--- a/leadership.html
+++ b/leadership.html
@@ -97,7 +97,31 @@
     </div>
 </div>  
 </br>  
+<div class="section-title">
+    2012-2017: Graduate Climate Conference
+</div>
   
+<div class="container">
+  <div class="clearfix">
+    <div class="left-column"></br> 
+    <img class="centered" src="./img/IMG_299008.jpg">
+     <p class="centered caption">
+        <i> Photo credit: Alek Krautmann </i>
+      </p>
+    </div> 
+    <div class="right-column">
+      </br>
+      <p>
+      The American Meteorological Society (AMS) Student Conference is an annual meeting for undergraduate and graduate students interested in atmospheric and related sciences.  The conference program spans across the private, broadcast, academic, and government sectors to engage students with different career options. I was part of the planning committee from 2012-2014, serving as a session chair on the 12th and 13th iterations of the conference. 
+      </p>
+      <p> Click <a style="color:black" href="https://twitter.com/amsstudentconf" target="_blank">here</a> to learn more about this conference, held the weekend prior to the AMS Annual Meeting. </p>
+    </div> 
+    </div>
+</div>  
+</br>    
+
+
+
 <footer>
   <div id="footer-content">
     <p> </p>
