--- a/leadership.html
+++ b/leadership.html
@@ -98,7 +98,7 @@
 </div>  
 </br>  
 <div class="section-title">
-    2012-2017: Graduate Climate Conference
+    2012-2014: American Meteorological Society Student Conference
 </div>
   
 <div class="container">
