--- a/research.html
+++ b/research.html
@@ -38,7 +38,7 @@
     </p>
       </br>
       </br>
-      <img src="./img/bubble_noevap_polar_surfTHTVTPWa_wRMW_d23h00m00_d23h05m00_1200sqzoom.png" class="centered" width=280px max-width=100%  height=auto>
+      <img src="./img/bubble_noevap_polar_surfTHTVTPWa_wRMW_d23h00m00_d23h05m00_1200sqzoom.png" class="centered">
       </br>
       <p class="centered caption">
         <i><b>Figure 2.</b> Near-surface virtual potential temperature (colored) and total precipitable water (overlaid) asymmetries on day 23, hour 4, of a TC simulation with no re-evaporation of rainfall. Dashed concentric circles are drawn every 100 km from the TC center.</i>
@@ -76,9 +76,9 @@
 
 <div class="container">
   <div class="clearfix">
-    <div class="left-column"><img src="./img/drybubble_4096km2_2kmres_xy_850mbwindspeedfrom2D_d10h00m00.png" class="centered" width=280px max-width=100%  height=auto>
+    <div class="left-column"><img src="./img/drybubble_4096km2_2kmres_xy_850mbwindspeedfrom2D_d10h00m00.png" class="centered">
       </br>
-      <p class="centered no-margin" style="font-size: 14px">
+      <p class="centered caption">
         <i><b>Figure 3.</b> Snapshot of 850 mb wind speed (m/s) of a dry TC simulation.</i>
       </p>
     </div> 
@@ -102,9 +102,9 @@
 
 <div class="container">
   <div class="clearfix">
-    <div class="left-column"><img src="./img/spectrum_TABS_z14km_r400km_2timeranges_ver2.png" class="centered" width=280px max-width=100%  height=auto>
+    <div class="left-column"><img src="./img/spectrum_TABS_z14km_r400km_2timeranges_ver2.png" class="centered">
       </br>
-      <p class="centered no-margin" style="font-size: 14px">
+      <p class="centered caption">
         <i><b>Figure 4.</b> Power spectral density of upper-level azimuthally averaged temperature at a radius of 400 km from the TC center (well beyond the storm core), showing a significant diurnal and semi-diurnal signal.</i>
       </p>
     </div> 
