--- a/research.html
+++ b/research.html
@@ -31,21 +31,21 @@
 
 <div class="container">
   <div class="clearfix">
-    <div class="left-column"><img src="./img/hurricane_satradar_SAM_simulation.png" class="centered">
-      </br>
+    <div class="left-column"></br> 
+      <img src="./img/hurricane_satradar_SAM_simulation.png" class="centered">
       <p class="centered caption">
         <i><b>Figure 1.</b> Main components of the mature TC structure in simulated satellite (left) and radar (right) data.</i>
     </p>
       </br>
       </br>
       <img src="./img/bubble_noevap_polar_surfTHTVTPWa_wRMW_d23h00m00_d23h05m00_1200sqzoom.png" class="centered">
-      </br>
       <p class="centered caption">
         <i><b>Figure 2.</b> Near-surface virtual potential temperature (colored) and total precipitable water (overlaid) asymmetries on day 23, hour 4, of a TC simulation with no re-evaporation of rainfall. Dashed concentric circles are drawn every 100 km from the TC center.</i>
       </p>
   
     </div> 
     <div class="right-column">
+    </br>
       <p>
       Spiral bands are one of the most prominent features of tropical cyclones (TCs, see Figure 1). These regions of clouds and rainfall are often the source of major TC hazards, such as inland flooding, mudslides, and tornadoes. Since the advent of radar technology, numerous ideas have been proposed to explain the existence of TC spiral bands. Previous hypotheses include the manifestation of atmospheric waves emanating from the TC inner core, boundary layer instabilities, and the interaction between surface cold pools and low-level vertical wind shear. Despite much effort, no consensus has yet been reached on the underlying physical mechanism responsible for TC bands.   
       </p>
@@ -69,6 +69,7 @@
     </div> 
     </div>
 </div>
+</br>
 
   <div class="section-title">
     Dry Tropical Cyclone Spiral Bands 
