--- a/research.html
+++ b/research.html
@@ -77,13 +77,16 @@
 
 <div class="container">
   <div class="clearfix">
-    <div class="left-column"><img src="./img/drybubble_4096km2_2kmres_xy_850mbwindspeedfrom2D_d10h00m00.png" class="centered">
-      </br>
+    <div class="left-column"></br> 
+    <img src="./img/drybubble_4096km2_2kmres_xy_850mbwindspeedfrom2D_d10h00m00.png" class="centered">
       <p class="centered caption">
         <i><b>Figure 3.</b> Snapshot of 850 mb wind speed (m/s) of a dry TC simulation.</i>
       </p>
+  </br> 
+
     </div> 
     <div class="right-column">
+      </br> 
       <p>
         Under the present climate of our planet, the atmospheric vortices known as TCs are moist phenomena driven primarily by turbulent heat transfer from the ocean surface. Using a non-hydrostatic, axisymmetric model, <a style="color:black" href="https://doi.org/10.1175/2011JAS3639.1" target="_blank">Mrowiec et al. (2011)</a> showed that steady-state, TC-like vortices can develop in the absence of water vapor and phase transition. In such simulations, the base state is one of dry radiative-convective equilibrium (RCE), with dry-adiabatic lapse rates through the depth of the troposphere and a large temperature jump from the surface to the lowest model level. These dry TCs are primarily sustained by sensible heat fluxes from the surface, rather than latent heat fluxes. More recently, <a style="color:black" href="https://doi.org/10.1175/JAS-D-18-0357.1" target="_blank">Cronin and Chavas (2019)</a> showed that stable TC-like vortices can also form spontaneously in three-dimensional simulations of rotating RCE over a completely dry surface. Chapter 4 of my <a style="color:black" href="https://dspace.mit.edu/handle/1721.1/121760" target="_blank">Ph.D. thesis</a> examined the formation of spiral bands in similar dry TC simulations (see Figure 3). We find that these dry TCs exhibit many spiral bands in the wind and temperature fields extending far away from the inner core. Initially, these perturbations are nearly stationary and exhibit overturning circulations consistent with boundary layer instabilities. Barotropic-baroclinic instability dominates the TC structure later in the simulation, reducing the outer region to just a few spiral bands. I am working on determining the role these instabilities may have in the formation of spiral bands in moist TCs.     
       </p>
@@ -96,6 +99,7 @@
     </div> 
     </div>
 </div>
+</br> 
 
   <div class="section-title">
     Tropical Cyclone Diurnal Cycle
@@ -103,13 +107,14 @@
 
 <div class="container">
   <div class="clearfix">
-    <div class="left-column"><img src="./img/spectrum_TABS_z14km_r400km_2timeranges_ver2.png" class="centered">
-      </br>
+    <div class="left-column"></br> 
+    <img src="./img/spectrum_TABS_z14km_r400km_2timeranges_ver2.png" class="centered">
       <p class="centered caption">
         <i><b>Figure 4.</b> Power spectral density of upper-level azimuthally averaged temperature at a radius of 400 km from the TC center (well beyond the storm core), showing a significant diurnal and semi-diurnal signal.</i>
       </p>
     </div> 
     <div class="right-column">
+      </br> 
       <p>
        A recent observational analysis by <a style="color:black" href="https://doi.org/10.1175/MWR-D-13-00191.1" target="_blank">Dunion et al. (2014)</a> has reported significant repeating diurnal signals propagating outward at cloud-top height from tropical cyclone centers. Modeling studies suggest that the visible upper-level impacts reflect a diurnal cycle through the depth of the troposphere. In this study, the possibility of wavelike diurnal responses in tropical cyclones is characterized using 3D cloud-resolving numerical simulations with and without a diurnal cycle. Diurnal waves can only begin to propagate well beyond the storm core, and the outflow region is most receptive to near-core diurnal propagation because of its anticyclonic flow (Figure 4). The tropical cyclone structure appears particularly hostile to diurnal wave propagation during periods when the eyewall experiences a temporary breakdown similar to an eyewall replacement cycle (Abstract from <a style="color:black" href="https://doi.org/10.1175/JAS-D-16-0294.1" target="_blank">O'Neill et al. 2017</a>).    
       </p>
@@ -122,7 +127,7 @@
     </div> 
     </div>
 </div>
-
+</br> 
 <footer>
   <div id="footer-content">
     <p> </p>
