--- a/research.html
+++ b/research.html
@@ -34,7 +34,7 @@
     <div class="left-column"></br> 
       <img src="./img/hurricane_satradar_SAM_simulation.png" class="centered">
       <p class="centered caption">
-        <i><b>Figure 1.</b> Main components of the mature TC structure in simulated satellite (left) and radar (right) data.</i>
+        <i><b>Figure 1.</b> Main components of the mature TC structure in simulated satellite (left half) and radar (right half) data.</i>
     </p>
       </br>
       </br>
