--- a/research.html
+++ b/research.html
@@ -17,6 +17,7 @@
     <a href="index.html">Home</a>
     <a href="#" class="active">Research</a>
     <a href="leadership.html">Leadership</a>
+    <a href="resources.html">Resources/a>
     <a href="#">CV</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
