--- a/resources.html
+++ b/resources.html
@@ -1,1 +1,85 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport"
+     content="width=device-width, initial-scale=1, user-scalable=yes">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Diamilet (Diamy) Perez-Betancourt, PhD</title>
+</head>
+  
+<!-- Header Navigation Menu -->
+<body>
+
+<div class="topnav" id="myTopnav">
+    <a href="index.html">Home</a>
+    <a href="research.html">Research</a>
+    <a href="leadership.html">Leadership</a>
+    <a href="#" class="active">Resources</a>
+    <a href="#">CV</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>  
+      
+</div>
+<div id="header-image-menu"> 
+    <img src="./img/cropped-hurricane-banner_00.jpg"> 
+        <h2 id = "image-text"> 
+           Diamilet (Diamy) Pérez-Betancourt, PhD
+        </h2> 
+</div>
+
+<div class="container">
+  <div class="clearfix">
+    <div class="left-column"> </br>
+    <img class="centered" src="./img/IMG_2322.jpg"  width=240px > 
+      <h3>Diamilet (Diamy) Pérez-Betancourt, PhD</h3>
+      <p class="centered caption"> 
+         <i> Atmospheric Scientist </i>
+        <br/> <b>Name pronunciation:</b> Dee-a-mee-LET (Dee-A-mee) PE-res Be-tan-COORT
+        <br/> <b>Pronouns:</b> she/her/hers
+        <br/> <b>Email:</b> <a style="color:black" href="mailto: diamilet@gmail.com" target="_blank"> diamilet at gmail dot com</a>
+        <br/>
+        <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"><img style="padding-top:5px" src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" ></a>
+        <a href="https://www.researchgate.net/profile/Diamilet_Perez-Betancourt" target="_blank"><img style="padding-top:5px" src="https://img.shields.io/badge/Research%20Gate-gray?style=flat&logo=researchgate&labelColor=gray" ></a>
+        <a href="https://github.com/diamilet" target="_blank"><img style="padding-top:5px" src="https://img.shields.io/badge/Github-gray?style=flat&logo=github&labelColor=gray" ></a>
+      </p>
+    </div> 
+    <div class="right-column">
+      <p> Welcome to my webpage! </p> 
+      <p>I'm a Postdoctoral Associate at the <a style="color:black" href="https://eei.fiu.edu/" target="_blank">Extreme Events Institute</a>'s <a style="color:black" href="http://www.ihrc.fiu.edu/" target="_blank">International Hurricane Research Center</a> at <a style="color:black" href="https://www.fiu.edu/" target="_blank">Florida International University</a>. In 2019, I received my Ph.D. degree in Atmospheric Science from the <a style="color:black" href="http://paocweb.mit.edu/" target="_blank">Program in Atmospheres, Oceans, and Climate</a> at the <a style="color:black" href="https://www.mit.edu/" target="_blank">Massachusetts Institute of Technology</a>. At MIT, I worked with <a style="color:black" href="https://emanuel.mit.edu/" target="_blank">Prof. Kerry Emanuel</a> on the formation and maintenance of tropical cyclone - or hurricane - rain bands. My primary focus is to better understand the physics of tropical cyclones, which are dangerous storms that annually affect many people around the world. I was born and raised in the island of Puerto Rico, where I experienced the threat of tropical cyclones at an early age. I decided to study them with the aim of helping vulnerable communities achieve better preparedness. Before graduate school, I earned my B.S. in Theoretical Physics from the <a style="color:black" href="https://www.uprm.edu/portada/" target="_blank">University of Puerto Rico at Mayagüez</a>.  </p>
+      <p> <b> Research Interests: </b></p>
+      <ul>
+          <li>Tropical Meteorology</li>
+          <li>Tropical Cyclones (Hurricanes)</li>
+          <li>Diurnal Cycle of Convection</li>
+          <li>Atmospheric Waves and Vortices</li>
+          <li>Hurricanes and Climate Change</li>
+      </ul>
+    </div> 
+    </div>
+</div>
+
+<footer>
+  <div id="footer-content">
+    <p> </p>
+  </div>
+</footer>
+  
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
+
+  
+</body>
+</html>
