--- a/resources.html
+++ b/resources.html
@@ -24,13 +24,7 @@
   </a>
 </div>  
       
-</div>
-<div id="header-image-menu"> 
-    <img src="./img/cropped-hurricane-banner_00.jpg"> 
-        <h2 id = "image-text"> 
-           Diamilet (Diamy) Pérez-Betancourt, PhD
-        </h2> 
-</div>
+<h1> Resources </h1>
 
 <footer>
   <div id="footer-content">
