--- a/resources.html
+++ b/resources.html
@@ -26,6 +26,17 @@
       
 <h1> Resources </h1>
 
+<div class="section-title">
+    Weather and Climate
+</div>
+  
+Agencies 
+<ul>
+  <li> <b> National Weather Service </b> <a style="color:black" href="https://www.weather.gov/" target="_blank">Official Website</a></li>
+  </ul>
+  
+  
+  
 <footer>
   <div id="footer-content">
     <p> </p>
