--- a/resources.html
+++ b/resources.html
@@ -30,9 +30,10 @@
     Weather and Climate
 </div>
   
-Agencies 
+
 <ul>
-  <li> <b> National Weather Service </b> <a style="color:black" href="https://www.weather.gov/" target="_blank">Official Website</a></li>
+  <h5> Agencies</h5>
+  <li> <b> National Weather Service </b> (<a style="color:black" href="https://www.weather.gov/" target="_blank">Official Website</a>): Official U.S. government agency in charge of providing weather information and issuing warnings during life threatening situations. </li>
   </ul>
   
   
