--- a/resources.html
+++ b/resources.html
@@ -30,7 +30,7 @@
     Weather and Climate
 </div>
   
-<h5> Agencies</h5>
+<h5>&raquo; Agencies</h5>
 <ul class="nospace"> 
   <li> <b> National Weather Service </b> (<a style="color:black" href="https://www.weather.gov/" target="_blank">Official Website</a>): Official U.S. government agency in charge of providing weather information and issuing warnings during life threatening situations. </li>
   </ul>
