--- a/resources.html
+++ b/resources.html
@@ -32,8 +32,10 @@
   
 <h5>&raquo; Agencies</h5>
 <ul class="nospace"> 
-  <li> <b> National Weather Service </b> (<a style="color:black" href="https://www.weather.gov/" target="_blank">Official Website</a>): Official U.S. government agency in charge of providing weather information and issuing warnings during life threatening situations. </li>
-  </ul>
+  <li> <b> National Weather Service </b> (<a style="color:black" href="https://www.weather.gov/" target="_blank">Official Website</a>, <a style="color:black" href="https://www.facebook.com/NWS" target="_blank">Facebook</a>, <a style="color:black" href="https://twitter.com/NWS" target="_blank">Twitter</a>): Official U.S. government agency in charge of providing weather information and issuing warnings during life threatening situations. </li>
+</ul>
+  
+<h5>&raquo; Observations</h5>
   
   
   
