--- a/resources.html
+++ b/resources.html
@@ -36,7 +36,9 @@
 </ul>
   
 <h5>&raquo; Observations</h5>
-  
+<ul class="nospace"> 
+  <li> <b> Station Observations:</b> <a style="color:black" href="https://www.wrh.noaa.gov/zoa/getobext.php" target="_blank">5 minute obs via Oakland Center Weather Service Unit</a> (4-letter airport ID = <a style="color:black" href="https://en.wikipedia.org/wiki/ICAO_airport_code" target="_blank">ICAO airport code</a>) </li>
+</ul>  
   
   
 <footer>
