--- a/resources.html
+++ b/resources.html
@@ -38,6 +38,8 @@
 <h5>&raquo; Observations</h5>
 <ul class="nospace"> 
   <li> <b> Station Observations:</b> <a style="color:black" href="https://www.wrh.noaa.gov/zoa/getobext.php" target="_blank">5 minute obs via Oakland Center Weather Service Unit</a> (4-letter airport ID = <a style="color:black" href="https://en.wikipedia.org/wiki/ICAO_airport_code" target="_blank">ICAO airport code</a>) </li>
+   <li> <b> Surface Analysis:</b> <a style="color:black" href="https://ocean.weather.gov/unified_analysis.php" target="_blank">Unified Analysis</a> | <a style="color:black" href="http://weather.rap.ucar.edu/surface/" target="_blank">RAP/NCAR</a> </li>
+   <li> <b> Satellite Imagery:</b> <a style="color:black" href="https://www.goes.noaa.gov/" target="_blank">NOAA Geostationary Satellite Server</a> | <a style="color:black" href="https://rammb-slider.cira.colostate.edu/" target="_blank">SLIDER by RAMMB/CIRA @ CSU</a> </li>  
 </ul>  
   
   
