--- a/resources.html
+++ b/resources.html
@@ -26,11 +26,26 @@
       
 <h1> Resources </h1>
 
-<div class="section-title">
+ <div id="toc_container">
+<p class="toc_title">Contents</p>
+<ul class="toc_list">
+  <li><a href="#First_Point_Header">1 First Point Header</a>
+  <ul>
+    <li><a href="#First_Sub_Point_1">1.1 First Sub Point 1</a></li>
+    <li><a href="#First_Sub_Point_2">1.2 First Sub Point 2</a></li>
+  </ul>
+</li>
+<li><a href="#Second_Point_Header">2 Second Point Header</a></li>
+<li><a href="#Third_Point_Header">3 Third Point Header</a></li>
+</ul>
+</div> 
+  
+  
+<div id="First_Point_Header" class="section-title">
     Weather and Climate
 </div>
   
-<h5>&raquo; Agencies</h5>
+<h5 id="#First_Sub_Point_1">&raquo; Agencies</h5>
 <ul class="nospace"> 
   <li> <b> National Weather Service </b> (<a style="color:black" href="https://www.weather.gov/" target="_blank">Official Website</a>, <a style="color:black" href="https://www.facebook.com/NWS" target="_blank">Facebook</a>, <a style="color:black" href="https://twitter.com/NWS" target="_blank">Twitter</a>): Official U.S. government agency in charge of providing weather information and issuing warnings during life threatening situations. </li>
 </ul>
