--- a/resources.html
+++ b/resources.html
@@ -26,9 +26,7 @@
       
 <h1> Resources </h1>
 
- <div id="toc_container">
-<p class="toc_title">Contents</p>
-<ul class="toc_list">
+<ul id="toc">
   <li><a href="#First_Point_Header">1 First Point Header</a>
   <ul>
     <li><a href="#First_Sub_Point_1">1.1 First Sub Point 1</a></li>
