--- a/resources.html
+++ b/resources.html
@@ -27,9 +27,9 @@
 <h1> Resources </h1>
 
 <ul id="toc">
-  <li><a href="#First_Point_Header">1 First Point Header</a>
+  <li><a href="#section_header_1">Weather and Climate</a>
   <ul>
-    <li><a href="#First_Sub_Point_1">1.1 First Sub Point 1</a></li>
+    <li><a href="#subsection_header_1">Agencies</a></li>
     <li><a href="#First_Sub_Point_2">1.2 First Sub Point 2</a></li>
   </ul>
 </li>
@@ -39,18 +39,18 @@
 </div> 
   
   
-<div id="First_Point_Header" class="section-title">
+<div id="section_header_1" class="section-title">
     Weather and Climate
 </div>
   
-<h5 id="#First_Sub_Point_1">&raquo; Agencies</h5>
+<h5 id="subsection_header_1">&raquo; Agencies</h5>
 <ul class="nospace"> 
   <li> <b> National Weather Service </b> (<a style="color:black" href="https://www.weather.gov/" target="_blank">Official Website</a>, <a style="color:black" href="https://www.facebook.com/NWS" target="_blank">Facebook</a>, <a style="color:black" href="https://twitter.com/NWS" target="_blank">Twitter</a>): Official U.S. government agency in charge of providing weather information and issuing warnings during life threatening situations. </li>
 </ul>
 
 <!--<a style="color:black" href="" target="_blank"></a>-->
   
-<h5>&raquo; Observations</h5>
+<h5 id="subsection_header_2">&raquo; Observations</h5>
 <ul class="nospace"> 
   <li> <b> Station Observations:</b> <a style="color:black" href="https://www.wrh.noaa.gov/zoa/getobext.php" target="_blank">5 minute obs via Oakland Center Weather Service Unit</a> (4-letter airport ID = <a style="color:black" href="https://en.wikipedia.org/wiki/ICAO_airport_code" target="_blank">ICAO airport code</a>) </li>
    <li> <b> Surface Analysis:</b> <a style="color:black" href="https://ocean.weather.gov/unified_analysis.php" target="_blank">Unified Analysis</a> | <a style="color:black" href="http://weather.rap.ucar.edu/surface/" target="_blank">RAP/NCAR</a> </li>
