--- a/resources.html
+++ b/resources.html
@@ -29,8 +29,8 @@
 <ul id="toc">
   <li><a href="#section_header_1">Weather and Climate</a>
   <ul>
-    <li><a href="#subsection_header_1">Agencies</a></li>
-    <li><a href="#First_Sub_Point_2">1.2 First Sub Point 2</a></li>
+    <li><a href="#subsection_header_1">&raquo; Agencies</a></li>
+    <li><a href="#subsection_header_2">&raquo; Observations </a></li>
   </ul>
 </li>
 <li><a href="#Second_Point_Header">2 Second Point Header</a></li>
