--- a/resources.html
+++ b/resources.html
@@ -25,32 +25,37 @@
 </div>  
       
 <h1> Resources </h1>
-
+  </br>
+  <h5> Contents: </h5>
+  
 <ul id="toc">
-  <li><a href="#section_header_1">Weather and Climate</a>
+  <li><a href="#weatherandclimate">Weather and Climate</a>
   <ul>
-    <li><a href="#subsection_header_1">&raquo; Agencies</a></li>
-    <li><a href="#subsection_header_2">&raquo; Observations </a></li>
+    <li><a href="#agencies">&raquo; Agencies</a></li>
+    <li><a href="#observations">&raquo; Observations </a></li>
+    <li><a href="#modelguidance">&raquo; Model Guidance </a></li>
+    <li><a href="#modelguidance">&raquo; Reanalysis </a></li>
+    <li><a href="#climatology">&raquo; Climatology </a></li>
   </ul>
 </li>
-<li><a href="#Second_Point_Header">2 Second Point Header</a></li>
-<li><a href="#Third_Point_Header">3 Third Point Header</a></li>
+<li><a href="#tropicalcyclones">Tropical Cyclones</a></li>
+<li><a href="#water">Water</a></li>
 </ul>
 </div> 
   
   
-<div id="section_header_1" class="section-title">
+<div id="weatherandclimate" class="section-title">
     Weather and Climate
 </div>
   
-<h5 id="subsection_header_1">&raquo; Agencies</h5>
+<h5 id="agencies">&raquo; Agencies</h5>
 <ul class="nospace"> 
   <li> <b> National Weather Service </b> (<a style="color:black" href="https://www.weather.gov/" target="_blank">Official Website</a>, <a style="color:black" href="https://www.facebook.com/NWS" target="_blank">Facebook</a>, <a style="color:black" href="https://twitter.com/NWS" target="_blank">Twitter</a>): Official U.S. government agency in charge of providing weather information and issuing warnings during life threatening situations. </li>
 </ul>
 
 <!--<a style="color:black" href="" target="_blank"></a>-->
   
-<h5 id="subsection_header_2">&raquo; Observations</h5>
+<h5 id="observations">&raquo; Observations</h5>
 <ul class="nospace"> 
   <li> <b> Station Observations:</b> <a style="color:black" href="https://www.wrh.noaa.gov/zoa/getobext.php" target="_blank">5 minute obs via Oakland Center Weather Service Unit</a> (4-letter airport ID = <a style="color:black" href="https://en.wikipedia.org/wiki/ICAO_airport_code" target="_blank">ICAO airport code</a>) </li>
    <li> <b> Surface Analysis:</b> <a style="color:black" href="https://ocean.weather.gov/unified_analysis.php" target="_blank">Unified Analysis</a> | <a style="color:black" href="http://weather.rap.ucar.edu/surface/" target="_blank">RAP/NCAR</a> </li>
@@ -60,11 +65,11 @@
 <a style="color:black" href="https://mausam.imd.gov.in/imd_latest/contents/index_radar.php" target="_blank"> India </a> | <a style="color:black" href="https://www.met.gov.fj/index.php?page=radar" target="_blank">Fiji</a></li>  
 </ul>  
 
-<h5>&raquo; Model Guidance</h5>
+<h5 id="modelguidance">&raquo; Model Guidance</h5>
 
-<h5>&raquo; Reanalysis</h5>
+<h5 id="reanalysis">&raquo; Reanalysis</h5>
 
-<h5>&raquo; Climatology</h5>
+<h5 id="climatology">&raquo; Climatology</h5>
 
 
   
