--- a/resources.html
+++ b/resources.html
@@ -25,21 +25,21 @@
 </div>  
       
 <h1> Resources </h1>
-  </br>
+  
   <h5> Contents: </h5>
   
 <ul id="toc">
-  <li><a href="#weatherandclimate">Weather and Climate</a>
+  <li><a style="color:indigo" href="#weatherandclimate">Weather and Climate</a>
   <ul>
-    <li><a href="#agencies">&raquo; Agencies</a></li>
-    <li><a href="#observations">&raquo; Observations </a></li>
-    <li><a href="#modelguidance">&raquo; Model Guidance </a></li>
-    <li><a href="#modelguidance">&raquo; Reanalysis </a></li>
-    <li><a href="#climatology">&raquo; Climatology </a></li>
+    <li><a style="color:indigo" href="#agencies">&raquo; Agencies</a></li>
+    <li><a style="color:indigo" href="#observations">&raquo; Observations </a></li>
+    <li><a style="color:indigo" href="#modelguidance">&raquo; Model Guidance </a></li>
+    <li><a style="color:indigo" href="#modelguidance">&raquo; Reanalysis </a></li>
+    <li><a style="color:indigo" href="#climatology">&raquo; Climatology </a></li>
   </ul>
 </li>
-<li><a href="#tropicalcyclones">Tropical Cyclones</a></li>
-<li><a href="#water">Water</a></li>
+<li><a style="color:indigo" href="#tropicalcyclones">Tropical Cyclones</a></li>
+<li><a style="color:indigo" href="#water">Water</a></li>
 </ul>
 </div> 
   
