--- a/resources.html
+++ b/resources.html
@@ -29,17 +29,17 @@
   <h5> Contents: </h5>
   
 <ul id="toc">
-  <li><a style="color:indigo" href="#weatherandclimate">Weather and Climate</a>
+  <li><a style="color:gray30" href="#weatherandclimate">Weather and Climate</a>
   <ul>
-    <li><a style="color:indigo" href="#agencies">&raquo; Agencies</a></li>
-    <li><a style="color:indigo" href="#observations">&raquo; Observations </a></li>
-    <li><a style="color:indigo" href="#modelguidance">&raquo; Model Guidance </a></li>
-    <li><a style="color:indigo" href="#modelguidance">&raquo; Reanalysis </a></li>
-    <li><a style="color:indigo" href="#climatology">&raquo; Climatology </a></li>
+    <li><a style="color:gray30" href="#agencies">&raquo; Agencies</a></li>
+    <li><a style="color:gray30" href="#observations">&raquo; Observations </a></li>
+    <li><a style="color:gray30" href="#modelguidance">&raquo; Model Guidance </a></li>
+    <li><a style="color:gray30" href="#modelguidance">&raquo; Reanalysis </a></li>
+    <li><a style="color:gray30" href="#climatology">&raquo; Climatology </a></li>
   </ul>
 </li>
-<li><a style="color:indigo" href="#tropicalcyclones">Tropical Cyclones</a></li>
-<li><a style="color:indigo" href="#water">Water</a></li>
+<li><a style="color:gray30" href="#tropicalcyclones">Tropical Cyclones</a></li>
+<li><a style="color:gray30" href="#water">Water</a></li>
 </ul>
 </div> 
   
