--- a/resources.html
+++ b/resources.html
@@ -60,10 +60,20 @@
   <li> <b> Station Observations:</b> <a style="color:black" href="https://www.wrh.noaa.gov/zoa/getobext.php" target="_blank">5 minute obs via Oakland Center Weather Service Unit</a> (4-letter airport ID = <a style="color:black" href="https://en.wikipedia.org/wiki/ICAO_airport_code" target="_blank">ICAO airport code</a>) </li>
    <li> <b> Surface Analysis:</b> <a style="color:black" href="https://ocean.weather.gov/unified_analysis.php" target="_blank">Unified Analysis</a> | <a style="color:black" href="http://weather.rap.ucar.edu/surface/" target="_blank">RAP/NCAR</a> </li>
    <li> <b> Satellite Imagery:</b> <a style="color:black" href="https://www.goes.noaa.gov/" target="_blank">NOAA Geostationary Satellite Server</a> | <a style="color:black" href="https://rammb-slider.cira.colostate.edu/" target="_blank">SLIDER by RAMMB/CIRA at CSU</a> </li>  
-   <li> <b> Radar Imagery:</b> <a style="color:black" href="https://radar.weather.gov/" target="_blank">U.S.  - NWS Radar Display</a> (option: <a style="color:black" href="https://radar.weather.gov/ridge/lite/" target="_blank"> "lite" gifs</a>) | <a style="color:black" href="https://weather.gc.ca/radar/" target="_blank">Canada</a> | <a style="color:black" href="http://www.weather.bm/radar.asp" target="_blank">Bermuda </a> | <a style="color:black" href="https://radars.bahamasweather.org.bs/" target="_blank">Bahamas</a> | <a style="color:black" href="http://www.meteo.fr/temps/domtom/antilles/pack-public/bulletin/3h/anim_radar_3h_mart.gif" target="_blank"> Martinique</a>/<a style="color:black" href="http://www.meteofrance.gp/previsions-meteo-antilles-guyane/animation/radar/antilles" target="_blank">Lesser Antilles</a> | <a style="color:black" href=" http://www.insmet.cu/asp/genesis.asp?TB0=PLANTILLAS&TB1=RADARES" target="_blank">Cuba</a> | <a style="color:black" href="https://www.barbadosweather.org/BMS_Radar_Composite_Resp.php#" target="_blank">Barbados' Caribbean Radar Mosaic</a>   
-  </br>
-<a style="color:black" href="https://mausam.imd.gov.in/imd_latest/contents/index_radar.php" target="_blank"> India </a> | <a style="color:black" href="https://www.met.gov.fj/index.php?page=radar" target="_blank">Fiji</a></li>  
+   <li> <b> Radar Imagery:</b> <a style="color:black" href="https://radar.weather.gov/" target="_blank">U.S.  - NWS Radar Display</a> (option: <a style="color:black" href="https://radar.weather.gov/ridge/lite/" target="_blank"> "lite" gifs</a>) | <a style="color:black" href="https://weather.gc.ca/radar/" target="_blank">Canada</a> | <a style="color:black" href="http://www.weather.bm/radar.asp" target="_blank">Bermuda </a> | <a style="color:black" href="https://radars.bahamasweather.org.bs/" target="_blank">Bahamas</a> | <a style="color:black" href="http://www.meteo.fr/temps/domtom/antilles/pack-public/bulletin/3h/anim_radar_3h_mart.gif" target="_blank"> Martinique</a>/<a style="color:black" href="http://www.meteofrance.gp/previsions-meteo-antilles-guyane/animation/radar/antilles" target="_blank">Lesser Antilles</a> | <a style="color:black" href=" http://www.insmet.cu/asp/genesis.asp?TB0=PLANTILLAS&TB1=RADARES" target="_blank">Cuba</a> | <a style="color:black" href="https://www.barbadosweather.org/BMS_Radar_Composite_Resp.php#" target="_blank">Barbados' Caribbean Radar Mosaic</a> | <a style="color:black" href="http://bart.ideam.gov.co/geotiff/satelite/gif/radar/curazao_Basemap.gif" target="_blank">Curaçao</a> | <a style="color:black" href="https://www.meteo.cw/rad_comp_loop.php?Lang=Eng&St=TNCC&Sws=R11" target="_blank">Curaçao Caribbean Radar Composite</a> 
+</br>
+<a style="color:black" href="http://www.nmc.cn/publish/radar/chinaall.html" target="_blank">China</a></li> |  
+<a style="color:black" href="https://mausam.imd.gov.in/imd_latest/contents/index_radar.php" target="_blank"> India </a> | 
+<a style="color:black" href="http://www.jma.go.jp/en/radnowc/" target="_blank">Japan</a></li> |
+<a style="color:black" href="https://www.panahon.gov.ph//" target="_blank">Philippines</a></li> |
+<a style="color:black" href="https://www.cwb.gov.tw/V8/C/W/OBS_Radar.html" target="_blank">Taiwan</a></li> |
+<a style="color:black" href="https://www.met.gov.fj/index.php?page=radar" target="_blank">Fiji</a></li> |
+<a style="color:black" href="http://www.bom.gov.au/australia/radar/" target="_blank">Australia</a></li> |
 </ul>  
+
+
+
+
 
 <h5 id="modelguidance">&raquo; Model Guidance</h5>
 
