--- a/resources.html
+++ b/resources.html
@@ -34,7 +34,7 @@
     <li><a style="color:#4d4d4d" href="#agencies">&raquo; Agencies</a></li>
     <li><a style="color:#4d4d4d" href="#observations">&raquo; Observations </a></li>
     <li><a style="color:#4d4d4d" href="#modelguidance">&raquo; Model Guidance </a></li>
-    <li><a style="color:#4d4d4d" href="#modelguidance">&raquo; Reanalysis </a></li>
+    <li><a style="color:#4d4d4d" href="#reanalysis">&raquo; Reanalysis </a></li>
     <li><a style="color:#4d4d4d" href="#climatology">&raquo; Climatology </a></li>
   </ul>
 </li>
@@ -52,26 +52,42 @@
 <ul class="nospace"> 
   <li> <b> National Weather Service </b> (<a style="color:black" href="https://www.weather.gov/" target="_blank">Official Website</a>, <a style="color:black" href="https://www.facebook.com/NWS" target="_blank">Facebook</a>, <a style="color:black" href="https://twitter.com/NWS" target="_blank">Twitter</a>): Official U.S. government agency in charge of providing weather information and issuing warnings during life threatening situations. </li>
 </ul>
-
-<!--<a style="color:black" href="" target="_blank"></a>-->
   
 <h5 id="observations">&raquo; Observations</h5>
 <ul class="nospace"> 
   <li> <b> Station Observations:</b> <a style="color:black" href="https://www.wrh.noaa.gov/zoa/getobext.php" target="_blank">5 minute obs via Oakland Center Weather Service Unit</a> (4-letter airport ID = <a style="color:black" href="https://en.wikipedia.org/wiki/ICAO_airport_code" target="_blank">ICAO airport code</a>) </li>
    <li> <b> Surface Analysis:</b> <a style="color:black" href="https://ocean.weather.gov/unified_analysis.php" target="_blank">Unified Analysis</a> | <a style="color:black" href="http://weather.rap.ucar.edu/surface/" target="_blank">RAP/NCAR</a> </li>
    <li> <b> Satellite Imagery:</b> <a style="color:black" href="https://www.goes.noaa.gov/" target="_blank">NOAA Geostationary Satellite Server</a> | <a style="color:black" href="https://rammb-slider.cira.colostate.edu/" target="_blank">SLIDER by RAMMB/CIRA at CSU</a> </li>  
-   <li> <b> Radar Imagery:</b> <a style="color:black" href="https://radar.weather.gov/" target="_blank">U.S.  - NWS Radar Display</a> (option: <a style="color:black" href="https://radar.weather.gov/ridge/lite/" target="_blank"> "lite" gifs</a>) | <a style="color:black" href="https://weather.gc.ca/radar/" target="_blank">Canada</a> | <a style="color:black" href="http://www.weather.bm/radar.asp" target="_blank">Bermuda </a> | <a style="color:black" href="https://radars.bahamasweather.org.bs/" target="_blank">Bahamas</a> | <a style="color:black" href="http://www.meteo.fr/temps/domtom/antilles/pack-public/bulletin/3h/anim_radar_3h_mart.gif" target="_blank"> Martinique</a>/<a style="color:black" href="http://www.meteofrance.gp/previsions-meteo-antilles-guyane/animation/radar/antilles" target="_blank">Lesser Antilles</a> | <a style="color:black" href=" http://www.insmet.cu/asp/genesis.asp?TB0=PLANTILLAS&TB1=RADARES" target="_blank">Cuba</a> | <a style="color:black" href="https://www.barbadosweather.org/BMS_Radar_Composite_Resp.php#" target="_blank">Barbados' Caribbean Radar Mosaic</a> | <a style="color:black" href="http://bart.ideam.gov.co/geotiff/satelite/gif/radar/curazao_Basemap.gif" target="_blank">Curaçao</a> | <a style="color:black" href="https://www.meteo.cw/rad_comp_loop.php?Lang=Eng&St=TNCC&Sws=R11" target="_blank">Curaçao Caribbean Radar Composite</a> 
+   <li> <b> Radar Imagery:</b> <a style="color:black" href="https://radar.weather.gov/" target="_blank">U.S.  - NWS Radar Display</a> (option: <a style="color:black" href="https://radar.weather.gov/ridge/lite/" target="_blank"> "lite" gifs</a>) | 
+     <a style="color:black" href="https://weather.gc.ca/radar/" target="_blank">Canada</a> | 
+     <a style="color:black" href="http://www.weather.bm/radar.asp" target="_blank">Bermuda </a> | 
+     <a style="color:black" href="https://radars.bahamasweather.org.bs/" target="_blank">Bahamas</a> | 
+     <a style="color:black" href="http://www.meteo.fr/temps/domtom/antilles/pack-public/bulletin/3h/anim_radar_3h_mart.gif" target="_blank"> Martinique</a>/<a style="color:black" href="http://www.meteofrance.gp/previsions-meteo-antilles-guyane/animation/radar/antilles" target="_blank">Lesser Antilles</a> | 
+     <a style="color:black" href=" http://www.insmet.cu/asp/genesis.asp?TB0=PLANTILLAS&TB1=RADARES" target="_blank">Cuba</a> | 
+     <a style="color:black" href="https://www.barbadosweather.org/BMS_Radar_Composite_Resp.php#" target="_blank">Barbados' Caribbean Radar Mosaic</a> | 
+     <a style="color:black" href="http://bart.ideam.gov.co/geotiff/satelite/gif/radar/curazao_Basemap.gif" target="_blank">Curaçao</a> | 
+     <a style="color:black" href="https://www.meteo.cw/rad_comp_loop.php?Lang=Eng&St=TNCC&Sws=R11" target="_blank">Curaçao Caribbean Radar Composite</a> 
 </br>
-<a style="color:black" href="http://www.nmc.cn/publish/radar/chinaall.html" target="_blank">China</a> | <a style="color:black" href="https://mausam.imd.gov.in/imd_latest/contents/index_radar.php" target="_blank"> India </a> | <a style="color:black" href="http://www.jma.go.jp/en/radnowc/" target="_blank">Japan</a> | <a style="color:black" href="https://www.panahon.gov.ph//" target="_blank">Philippines</a> | <a style="color:black" href="https://www.cwb.gov.tw/V8/C/W/OBS_Radar.html" target="_blank">Taiwan</a> | <a style="color:black" href="https://www.met.gov.fj/index.php?page=radar" target="_blank">Fiji</a> | <a style="color:black" href="http://www.bom.gov.au/australia/radar/" target="_blank">Australia</a> | Other: <a style="color:black" href="https://wrd.mgm.gov.tr/Home/Wrd" target="_blank">WMO Radar Database<a> </li>
+<a style="color:black" href="http://www.nmc.cn/publish/radar/chinaall.html" target="_blank">China</a> | 
+  <a style="color:black" href="https://mausam.imd.gov.in/imd_latest/contents/index_radar.php" target="_blank"> India </a> | 
+  <a style="color:black" href="http://www.jma.go.jp/en/radnowc/" target="_blank">Japan</a> | 
+  <a style="color:black" href="https://www.panahon.gov.ph//" target="_blank">Philippines</a> | 
+  <a style="color:black" href="https://www.cwb.gov.tw/V8/C/W/OBS_Radar.html" target="_blank">Taiwan</a> | 
+  <a style="color:black" href="https://www.met.gov.fj/index.php?page=radar" target="_blank">Fiji</a> | 
+  <a style="color:black" href="http://www.bom.gov.au/australia/radar/" target="_blank">Australia</a> | 
+  Other: <a style="color:black" href="https://wrd.mgm.gov.tr/Home/Wrd" target="_blank">WMO Radar Database<a> </li>
 <li> <b> Drought Monitor:</b> <a style="color:black" href="https://droughtmonitor.unl.edu/" target="_blank">United States</a> | <a style="color:black" href="https://droughtmonitor.unl.edu/CurrentMap/StateDroughtMonitor.aspx?PR" target="_blank">Puerto Rico</a> </li>  
 </ul>  
 
-
-
-
-
+  <!--<a style="color:black" href="" target="_blank"></a>-->
+  
 <h5 id="modelguidance">&raquo; Model Guidance</h5>
-
+<ul class="nospace"> 
+  <li><a style="color:black" href="https://mag.ncep.noaa.gov/model-guidance-model-area.php" target="_blank">NWS Model Analysis and Guidance website</a></li>
+  <li><a style="color:black" href="https://www.tropicaltidbits.com/analysis/models/" target="_blank">Levi Cowan's Tropical Tidbits</a></li> 
+  <li><a style="color:black" href="http://www.atmos.albany.edu/student/abentley/realtime.html" target="_blank">Alicia Bentley's GFS Analyses and Forecasts</a></li> 
+</ul>
+  
 <h5 id="reanalysis">&raquo; Reanalysis</h5>
 
 <h5 id="climatology">&raquo; Climatology</h5>
