--- a/resources.html
+++ b/resources.html
@@ -89,9 +89,15 @@
 </ul>
   
 <h5 id="reanalysis">&raquo; Reanalysis</h5>
+<ul class="nospace">  
+  <li><a style="color:black" href="https://psl.noaa.gov/data/gridded/data.ncep.reanalysis.html" target="_blank">NCEP/NCAR Reanalysis 1: Summary</a></li>
+</ul>
 
 <h5 id="climatology">&raquo; Climatology</h5>
-
+<ul class="nospace">  
+  <li><a style="color:black" href="https://climexp.knmi.nl/start.cgi" target="_blank">KNMI</a></li>
+  <li><a style="color:black" href="http://www.climatemps.com/" target="_blank">Clima Temps</a></li>
+</ul>
 
   
 <footer>
