--- a/resources.html
+++ b/resources.html
@@ -90,13 +90,15 @@
   
 <h5 id="reanalysis">&raquo; Reanalysis</h5>
 <ul class="nospace">  
-  <li><a style="color:black" href="https://psl.noaa.gov/data/gridded/data.ncep.reanalysis.html" target="_blank">NCEP/NCAR Reanalysis 1: Summary</a></li>
+  <li><b>NCEP/NCAR:</b> <a style="color:black" href="https://psl.noaa.gov/data/gridded/data.ncep.reanalysis.html" target="_blank">Re-analysis I</a></li>
 </ul>
 
 <h5 id="climatology">&raquo; Climatology</h5>
 <ul class="nospace">  
-  <li><a style="color:black" href="https://climexp.knmi.nl/start.cgi" target="_blank">KNMI</a></li>
-  <li><a style="color:black" href="http://www.climatemps.com/" target="_blank">Clima Temps</a></li>
+  <li><b>KNMI:</b> <a style="color:black" href="https://climexp.knmi.nl/start.cgi" target="_blank">Climate Explorer</a></li>
+  <li><b>ClimaTemps:</b> <a style="color:black" href="http://www.climatemps.com/" target="_blank">Home</a></li>
+  <li><b>Natural Resources Conservation Service:</b> <a style="color:black" href="https://www.wcc.nrcs.usda.gov/" target="_blank">National Water and Climate Center</a></li>
+  <li><b>National Climatic Data Center:</b> <a style="color:black" href="https://www7.ncdc.noaa.gov/CDO/cdopoemain.cmd?datasetabbv=DS3505&countryabbv=&georegionabbv=&resolution=40" target="_blank">Surface Data Hourly Global</a></li>
 </ul>
 
   
