--- a/resources.html
+++ b/resources.html
@@ -39,11 +39,14 @@
   </ul>
 </li>
 <li><a style="color:#4d4d4d" href="#tropicalcyclones">Tropical Cyclones</a></li>
+  <ul>
+    <li><a style="color:#4d4d4d" href="#tccenters">&raquo; Tropical cyclone centers (by area of responsibility)</a></li>
+  </ul>
 <li><a style="color:#4d4d4d" href="#water">Water</a></li>
 </ul>
 </div> 
   
-  
+ 
 <div id="weatherandclimate" class="section-title">
     Weather and Climate
 </div>
@@ -78,8 +81,6 @@
   Other: <a style="color:black" href="https://wrd.mgm.gov.tr/Home/Wrd" target="_blank">WMO Radar Database<a> </li>
 <li> <b> Drought Monitor:</b> <a style="color:black" href="https://droughtmonitor.unl.edu/" target="_blank">United States</a> | <a style="color:black" href="https://droughtmonitor.unl.edu/CurrentMap/StateDroughtMonitor.aspx?PR" target="_blank">Puerto Rico</a> </li>  
 </ul>  
-
-  <!--<a style="color:black" href="" target="_blank"></a>-->
   
 <h5 id="modelguidance">&raquo; Model Guidance</h5>
 <ul class="nospace"> 
@@ -101,6 +102,31 @@
   <li><b>National Climatic Data Center:</b> <a style="color:black" href="https://www7.ncdc.noaa.gov/CDO/cdopoemain.cmd?datasetabbv=DS3505&countryabbv=&georegionabbv=&resolution=40" target="_blank">Surface Data Hourly Global</a></li>
 </ul>
 
+   <!--<a style="color:black" href="" target="_blank"></a>-->
+<div id="tropicalcyclones" class="section-title">
+    Tropical Cyclones
+</div>
+<h5 id="tccenters">&raquo; Tropical cyclone centers (by area of responsibility)</h5>  
+<ul class="nospace">  
+  <li><b>Atlantic and Eastern Pacific:</b> <a style="color:black" href="" target="_blank"></a></li>
+  <li><b>Central Pacific:</b> <a style="color:black" href="" target="_blank"></a></li>
+  <li><b>Northwest Pacific:</b> <a style="color:black" href="http://www.jma.go.jp/en/typh/" target="_blank">Japan Meteorological Agency</a></li>
+  <li><b>North Indian Ocean:</b> <a style="color:black" href="https://mausam.imd.gov.in/" target="_blank">India Meteorological Department</a> (Social media: 
+  <a style="color:black" href="https://www.facebook.com/India.Meteorological.Department/" target="_blank">Facebook</a>)
+  </li>
+  <li><b>Southwest Indian Ocean:</b> <a style="color:black" href="http://www.meteofrance.re/cyclone/activite-cyclonique-en-cours" target="_blank">Météo France</a></li>
+  <li><b>Southeast Indian Ocean/Southwest Pacific (Australian Region):</b> <a style="color:black" href="http://www.bom.gov.au/cyclone/" target="_blank">Australian Bureau of Meteorology</a></li>
+  <li><b>Southeast Indian Ocean:</b> <a style="color:black" href="http://meteo.bmkg.go.id/siklon" target="_blank">Indonesian Agency for Meteorology</a></li>
+  <li><b>Southwest Pacific Ocean:</b> <a style="color:black" href="http://www.bom.gov.au/cosppac/countries/Papua-New-Guinea/" target="_blank">Papua New Guinea Meteorological Service</a></li>
+  <li><b>South Pacific:</b> <a style="color:black" href="https://www.met.gov.fj/" target="_blank">Fiji Meteorological Service </a> |
+  <a style="color:black" href="https://www.metservice.com/national" target="_blank">Meteorological Service of New Zealand Limited</a>
+  </li>
+</ul>  
+  
+<div id="water" class="section-title">
+    Water
+</div>  
+  
   
 <footer>
   <div id="footer-content">
