--- a/resources.html
+++ b/resources.html
@@ -108,8 +108,9 @@
 </div>
 <h5 id="tccenters">&raquo; Tropical cyclone centers (by area of responsibility)</h5>  
 <ul class="nospace">  
-  <li><b>Atlantic and Eastern Pacific:</b> <a style="color:black" href="" target="_blank"></a></li>
-  <li><b>Central Pacific:</b> <a style="color:black" href="" target="_blank"></a></li>
+  <li><b>Atlantic and Eastern Pacific:</b> <a style="color:black" href="https://www.nhc.noaa.gov/" target="_blank"></a>U.S. National Hurricane Center
+    (Social media: <a style="color:black" href="https://www.facebook.com/NWSNHC" target="_blank">Facebook</a>, <a style="color:black" href="https://twitter.com/NHC_Atlantic" target="_blank">Twitter-Atlantic</a> | <a style="color:black" href="https://twitter.com/NHC_Pacific" target="_blank">East Pacific</a>)</li>
+  <li><b>Central Pacific:</b> <a style="color:black" href="https://www.nhc.noaa.gov/?cpac" target="_blank">U.S. Central Pacific Hurricane Center</a></li>
   <li><b>Northwest Pacific:</b> <a style="color:black" href="http://www.jma.go.jp/en/typh/" target="_blank">Japan Meteorological Agency</a></li>
   <li><b>North Indian Ocean:</b> <a style="color:black" href="https://mausam.imd.gov.in/" target="_blank">India Meteorological Department</a> (Social media: 
   <a style="color:black" href="https://www.facebook.com/India.Meteorological.Department/" target="_blank">Facebook</a>)
@@ -119,7 +120,7 @@
   <li><b>Southeast Indian Ocean:</b> <a style="color:black" href="http://meteo.bmkg.go.id/siklon" target="_blank">Indonesian Agency for Meteorology</a></li>
   <li><b>Southwest Pacific Ocean:</b> <a style="color:black" href="http://www.bom.gov.au/cosppac/countries/Papua-New-Guinea/" target="_blank">Papua New Guinea Meteorological Service</a></li>
   <li><b>South Pacific:</b> <a style="color:black" href="https://www.met.gov.fj/" target="_blank">Fiji Meteorological Service </a> |
-  <a style="color:black" href="https://www.metservice.com/national" target="_blank">Meteorological Service of New Zealand Limited</a>
+  <a style="color:black" href="https://www.metservice.com/national" target="_blank">MetService of New Zealand</a>
   </li>
 </ul>  
   
